# hjdskes.nl

./: .gitignore  LICENSE  README.md  flake.nix  fourmolu.yaml  generator.cabal  overlay.nix
.github/workflows/: test.yml
app/: About.hs  Config.hs  Files.hs  Main.hs  Pandoc.hs  Static.hs
site/: about.md  config.yaml
site/templates/: about.html  footer.html  head.html
